--- a/website.css
+++ b/website.css
@@ -12,10 +12,14 @@
 
 .tile{
   padding: 0.5em;
-  max-width: 50%;
   margin-bottom: 1em;
 }
 
+.tile-1{ background: lightblue; }
+.tile-2{ background: lightblue; }
+.tile-3{ background: lightblue; }
+.tile-4{ background: lightblue; }
+.tile-5{ background: lightblue; }
 
 /* IMAGES */
 
