--- a/website.css
+++ b/website.css
@@ -14,6 +14,8 @@
   padding: 0.5em;
   margin-bottom: 1em;
 }
+.tile h2{ margin: 0; }
+.tile p{ margin-bottom: 0; }
 
 .tile-1{ background: lightblue; }
 .tile-2{ background: lightblue; }
