--- a/website.css
+++ b/website.css
@@ -17,11 +17,11 @@
 .tile h2{ margin: 0; }
 .tile p{ margin-bottom: 0; }
 
-.tile-1{ background: lightblue; }
+.tile-1{ background: lavendar; }
 .tile-2{ background: lightblue; }
-.tile-3{ background: lightblue; }
-.tile-4{ background: lightblue; }
-.tile-5{ background: lightblue; }
+.tile-3{ background: lightpink; }
+.tile-4{ background: lightyellow; }
+.tile-5{ background: lightcoral; }
 
 /* IMAGES */
 
