--- a/styles/website.css
+++ b/styles/website.css
@@ -14,12 +14,14 @@
   padding: 0.5em;
   margin-bottom: 1em;
 }
+.tile h2{ margin: 0; }
+.tile p{ margin-bottom: 0; }
 
-.tile-1{ background: lightblue; }
+.tile-1{ background: lavendar; }
 .tile-2{ background: lightblue; }
-.tile-3{ background: lightblue; }
-.tile-4{ background: lightblue; }
-.tile-5{ background: lightblue; }
+.tile-3{ background: lightpink; }
+.tile-4{ background: lightyellow; }
+.tile-5{ background: lightcoral; }
 
 /* IMAGES */
 
