--- a/styles/website.css
+++ b/styles/website.css
@@ -37,6 +37,7 @@
 
 .media-tile a{color: #333;}
 .media-tile img{width: 100%;}
+.media-tile h3{font-size: 120%}
 
 h1#how-the-tool-works-🖥    { background: lightyellow; padding-left: 10px; }
 h1#facilitation-in-loomio-🐝{ background: lightpink; padding-left: 10px; }
