--- a/styles/website.css
+++ b/styles/website.css
@@ -68,6 +68,7 @@ h1#future-of-work-🚀        { background: lightcoral; padding-left: 10px; }
   clear: both;
 }
 
+.img-100px{ width: 100px; }
 .img-200px{ width: 200px; }
 .img-250px{ width: 250px; }
 .img-300px{ width: 300px; }
