--- a/styles/website.css
+++ b/styles/website.css
@@ -16,7 +16,7 @@
   float: left;
 }
 
-.tile a{ color: #333; }
+.tile a, .media-list a{ color: #333; }
 .tile h2{ margin: 0; }
 .tile p{ margin-bottom: 0; }
 
