add user manual

--- a/styles/website.css
+++ b/styles/website.css
@@ -39,7 +39,7 @@
 .media-tile img{width: 100%;}
 .media-tile h3{font-size: 120%}
 
-h1#how-the-tool-works-🖥    { background: lightyellow; padding-left: 10px; }
+h1#user-manual-🖥    { background: lightyellow; padding-left: 10px; }
 #facilitation{ background: lightpink; padding-left: 10px; }
 h1#humans-of-loomio-🐒      { background: lavender; padding-left: 10px; }
 h1#coaching-resources-⚽    { background: lightblue; padding-left: 10px; }
