--- a/styles/website.css
+++ b/styles/website.css
@@ -9,6 +9,12 @@
 }
 
 
+/*FRONT PAGE*/
+.emoji-bullet{
+  font-size: 250%; float: left; margin:-4px 4px 0 0;
+}
+
+
 /*CHAPTER PAGE TILES*/
 
 .media-tile{
@@ -64,6 +70,7 @@ hr, .clear{clear: both;}
   These rules only apply to screens less than 600px wide.
   They override rules placed earlier in this file.
 */
+
 @media only screen and (max-width: 600px) {
   .img-50pc, .img-250px, .img-300px, .img-500px{
     width: 100%;
