embed videos in playlist

--- a/styles/website.css
+++ b/styles/website.css
@@ -47,6 +47,7 @@
   padding-bottom: 56.25%; /* 16:9 */
   padding-top: 25px;
   height: 0;
+  margin-bottom: 1em;
 }
 .video-wrapper iframe {
   position: absolute;
