--- a/styles/website.css
+++ b/styles/website.css
@@ -17,35 +17,23 @@
   margin: -4px 4px 0 0;
 }
 
-
-
-.half-width{
+.tile{
   padding: 0.5em;
   margin: 0 10px 10px 0;
-  width: calc(50% - 10px);
   float: left;
 }
 
-.70pc-width{
-  padding: 0.5em;
-  margin: 0 10px 10px 0;
-  width: calc(70% - 10px);
-  float: left;
-}
 
-.30pc-width{
-  padding: 0.5em;
-  margin: 0 10px 10px 0;
-  width: calc(30% - 10px);
-  float: left;
-}
+.tile-30pc{width: calc(30% - 10px);}
+.tile-50pc{width: calc(50% - 10px);}
+.tile-70pc{width: calc(70% - 10px);}
 
-.media-tile a{color: #333;}
-.media-tile img{width: 100%;}
-.media-tile h3{font-size: 120%}
+.tile-media a{color: #333;}
+.tile-media img{width: 100%;}
+.tile-media h3{font-size: 120%}
 
 @media only screen and (max-width: 970px) {
-  .half-width, .70pc-width, .30pc-width{
+  .tile, .tile-30pc, .tile-50pc, .tile-70pc{
     width: 100%;
     margin-right: 0;
     float: none;
