--- a/styles/website.css
+++ b/styles/website.css
@@ -72,6 +72,7 @@
   clear: both;
 }
 
+.img-70px{ width: 70px; }
 .img-100px{ width: 100px; }
 .img-200px{ width: 200px; }
 .img-250px{ width: 250px; }
