--- a/styles/website.css
+++ b/styles/website.css
@@ -116,6 +116,20 @@ hr, .clear{clear: both;}
   display: inherit;
 }
 
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
+
 /*
   These rules only apply to screens less than 600px wide.
   They override rules placed earlier in this file.
